style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    min-height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
    font-family: Roboto, sans-serif;
}

header,
.hero,
.info,
.quote,
.action {
    padding: 0 15%;
}

header,
.hero {
    background-color: #1f2937;
}

header {
    padding-top: 12px;
    padding-bottom: 12px;
    display: flex;
    gap: 24px;
}

.headertext {
    font-size: 24px;
    color: #F9FAF8;
}

.headerlink,
.herosubtext {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.headerlink.link1 {
    margin-left: auto;
}

.hero {
    display: flex;
    padding-top: 96px;
    padding-bottom: 124px;
    justify-content: space-between;
    gap: 24px;
}

.hero > div {
    flex: 1;
}

.herotextbox {
    display: flex;
    flex-direction: column;
}

.heromaintext {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.heroimagebox {
    display: flex;
    justify-content: center;
    align-items: center;
}

.heroimage {
    background-color: lightgray; /*Placeholder*/
    width: 350px;
    height: 150px;
}

button.signup {
    background-color: #3882F6;
    border: 0;
    border-radius: 6px;
    padding: 7px 24px;
    color: #F9FAF8;
    font-weight: bold;
}

.herotextbox > button.signup {
    align-self: flex-start;
    margin-top: 12px;
}

.info {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.infoitems {
    display: flex;
    justify-content: space-around;
    gap: 24px;
}

.infoitem {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.infoimage {
    width: 136px;
    height: 136px;
    background-color: lightgray;
}

.infosubtext {
    text-align: center;
    color: #4b5563;
}

.quote {
    background-color: #E5E7EB;
}

